@@ -4,7 +4,8 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make subsitelogoviewlet and the fallback logo more robust.
+  [raphael-s]
 
 
 2.4.2 (2016-11-28)
